crates/yul/tests/snapshots/snapshots__data_type_storage_full.snap
---
source: crates/yul/tests/snapshots.rs
expression: render_fixture(&fixture)
---
object "DataTypeStorageFullDeploy" {
  code {
    function usr$main_DataTypeStorageFull__start_d1108d95f() {
      mstore(64, memoryguard(128))
      if lt(codesize(), datasize("DataTypeStorageFullDeploy")) {
        revert(0, 0)
      }
      if callvalue() {
        mstore(0, 0xb5988ea3)
        revert(28, 4)
      }
      let asm$size_0 := datasize("DataTypeStorageFull")
      codecopy(0, dataoffset("DataTypeStorageFull"), datasize("DataTypeStorageFull"))
      return(0, asm$size_0)
    }
    usr$main_DataTypeStorageFull__start_d1108d95f()
  }
  object "DataTypeStorageFull" {
    code {
      function usr$CanStore_load_dfbf302d5$storage_da801a38cLBox_dd7631d90J_Box_dd7631d90(src$ptr_1) -> gen$result_2 {
        let _v0
        _v0 := usr$Typedef_rep_d050560b4$storage_da801a38cLBox_dd7631d90J_word(src$ptr_1)
        let _v1
        _v1 := usr$StorageType_load_da841f15e$Box_dd7631d90(_v0)
        gen$result_2 := _v1
        leave
      }
      function usr$StorageType_load_da841f15e$Box_dd7631d90(src$ptr_3) -> gen$result_4 {
        let _v2
        _v2 := usr$StorageType_load_db520978d$word(src$ptr_3)
        gen$result_4 := _v2
        leave
      }
      function usr$StorageType_load_db520978d$word(src$ptr_5) -> gen$result_6 {
        let _v3
        _v3 := usr$opcodes_sload_d563fc2e8(src$ptr_5)
        gen$result_6 := _v3
        leave
      }
      function usr$Typedef_rep_d050560b4$storage_da801a38cLBox_dd7631d90J_word(src$x_7) -> gen$result_8 {
        let src$w_9
        src$w_9 := src$x_7
        gen$result_8 := src$w_9
        leave
      }
      function usr$main_DataTypeStorageFull_main_dd6d1ea2d() -> gen$result_10 {
        let src$$match_scrutinee0_11
        let _v4
        _v4 := usr$CanStore_load_dfbf302d5$storage_da801a38cLBox_dd7631d90J_Box_dd7631d90(0)
        src$$match_scrutinee0_11 := _v4
        let src$inner_12
        src$inner_12 := src$$match_scrutinee0_11
        gen$result_10 := src$inner_12
        leave
      }
      function usr$opcodes_sload_d563fc2e8(src$a_13) -> gen$result_14 {
        let src$res_15
        src$res_15 := sload(src$a_13)
        gen$result_14 := src$res_15
        leave
      }
      let _v5
      _v5 := usr$main_DataTypeStorageFull_main_dd6d1ea2d()
    }
  }
}
