crates/yul/tests/snapshots/snapshots__dispatch_basic_shape.snap
---
source: crates/yul/tests/snapshots.rs
expression: "render_source(\"dispatch_basic_shape\",\nr#\"\nimport std.{*};\nimport std.dispatch.{*};\n\ncontract DispatchBasicShape {\n  public function id(x : uint256) -> uint256 {\n    return x;\n  }\n\n  public function answer() -> uint256 {\n    return uint256(42);\n  }\n}\n\"#,)"
---
object "DispatchBasicShapeDeploy" {
  code {
    function usr$dispatch_basic_shape_DispatchBasicShape__start_d214b9efd() {
      mstore(64, memoryguard(128))
      if lt(codesize(), datasize("DispatchBasicShapeDeploy")) {
        revert(0, 0)
      }
      if callvalue() {
        mstore(0, 0xb5988ea3)
        revert(28, 4)
      }
      let asm$size_0 := datasize("DispatchBasicShape")
      codecopy(0, dataoffset("DispatchBasicShape"), datasize("DispatchBasicShape"))
      return(0, asm$size_0)
    }
    usr$dispatch_basic_shape_DispatchBasicShape__start_d214b9efd()
  }
  object "DispatchBasicShape" {
    code {
      function usr$ABIDecode_decode_d84af4302_pcb6af4462cd5d163$ABIDecoder_da57c46d1Luint256_d2edb4603_CalldataWordReader_d3137e4ffJ_uint256_d2edb4603(src$ptr_1, src$currentHeadOffset_2) -> gen$result_3 {
        let _v0
        _v0 := usr$WordReader_advance_dbba4aaa0_pcb6af4462cd5d163$ABIDecoder_da57c46d1Luint256_d2edb4603_CalldataWordReader_d3137e4ffJ(src$ptr_1, src$currentHeadOffset_2)
        let _v1
        _v1 := usr$WordReader_read_dad71a7e5_pcb6af4462cd5d163$ABIDecoder_da57c46d1Luint256_d2edb4603_CalldataWordReader_d3137e4ffJ(_v0)
        let _v2
        _v2 := usr$Typedef_abs_dd4c3e90c$uint256_d2edb4603_word(_v1)
        gen$result_3 := _v2
        leave
      }
      function usr$ABIEncode_encodeInto_dd2f16529$uint256_d2edb4603(src$x_4, src$basePtr_5, src$offset_6, src$tail_7) -> gen$result_8 {
        let src$repx_9
        let _v3
        _v3 := usr$Typedef_rep_d87df7559$uint256_d2edb4603_word(src$x_4)
        src$repx_9 := _v3
        let _v4
        _v4 := usr$Add_add_d2e932f0d$word(src$basePtr_5, src$offset_6)
        usr$opcodes_mstore_d7415bc7e(_v4, src$repx_9)
        gen$result_8 := src$tail_7
        leave
      }
      function usr$Add_add_d2e932f0d$word(src$l_10, src$r_11) -> gen$result_12 {
        let _v5
        _v5 := add(src$l_10, src$r_11)
        gen$result_12 := _v5
        leave
      }
      function usr$Eq_eq_d6d5d59e2$word(src$x_13, src$y_14) -> _v6 {
        let _v7
        _v7 := eq(src$x_13, src$y_14)
        _v6 := _v7
        leave
      }
      function usr$HasWordReader_getWordReader_d92d4533d$calldata_d8debf069Lbytes_dc4f6af34J_CalldataWordReader_d3137e4ff(src$x_15) -> gen$result_16 {
        let _v8
        _v8 := usr$Typedef_rep_df279797b$calldata_d8debf069Lbytes_dc4f6af34J_word(src$x_15)
        gen$result_16 := _v8
        leave
      }
      function usr$MemoryPointer_ptr_dbc7e9939$memory_dda73d3aeLbytes_dc4f6af34J(src$v_17) -> gen$result_18 {
        let _v9
        _v9 := usr$Typedef_rep_d6e4e5fa6$memory_dda73d3aeLbytes_dc4f6af34J_word(src$v_17)
        let _v10
        _v10 := usr$Add_add_d2e932f0d$word(_v9, 32)
        gen$result_18 := _v10
        leave
      }
      function usr$MemorySize_len_da518cdbc$memory_dda73d3aeLbytes_dc4f6af34J(src$v_19) -> gen$result_20 {
        let _v11
        _v11 := usr$Typedef_rep_d6e4e5fa6$memory_dda73d3aeLbytes_dc4f6af34J_word(src$v_19)
        let _v12
        _v12 := usr$opcodes_mload_d8413229c(_v11)
        gen$result_20 := _v12
        leave
      }
      function usr$Ord_gt_dbce4d001$word(src$x_21, src$y_22) -> _v13 {
        let _v14
        _v14 := gt(src$x_21, src$y_22)
        _v13 := _v14
        leave
      }
      function usr$Sub_sub_dd601c728$word(src$l_23, src$r_24) -> gen$result_25 {
        let _v15
        _v15 := sub(src$l_23, src$r_24)
        gen$result_25 := _v15
        leave
      }
      function usr$Typedef_abs_dd4c3e90c$uint256_d2edb4603_word(src$w_26) -> gen$result_27 {
        gen$result_27 := src$w_26
        leave
      }
      function usr$Typedef_rep_d6e4e5fa6$memory_dda73d3aeLbytes_dc4f6af34J_word(src$x_28) -> gen$result_29 {
        let src$w_30
        src$w_30 := src$x_28
        gen$result_29 := src$w_30
        leave
      }
      function usr$Typedef_rep_d6e4e5fa6$memory_dda73d3aeLstring_d2d06d9f7J_word(src$x_31) -> gen$result_32 {
        let src$w_33
        src$w_33 := src$x_31
        gen$result_32 := src$w_33
        leave
      }
      function usr$Typedef_rep_d87df7559$uint256_d2edb4603_word(src$x_34) -> gen$result_35 {
        let src$w_36
        src$w_36 := src$x_34
        gen$result_35 := src$w_36
        leave
      }
      function usr$Typedef_rep_df279797b$calldata_d8debf069Lbytes_dc4f6af34J_word(src$x_37) -> gen$result_38 {
        let src$w_39
        src$w_39 := src$x_37
        gen$result_38 := src$w_39
        leave
      }
      function usr$WordReader_advance_dbba4aaa0_pcb6af4462cd5d163$ABIDecoder_da57c46d1Luint256_d2edb4603_CalldataWordReader_d3137e4ffJ(src$decoder_40, src$offset_41) -> gen$result_42 {
        let src$ptr_43
        src$ptr_43 := src$decoder_40
        let _v16
        _v16 := usr$WordReader_advance_ddbeacc0b$CalldataWordReader_d3137e4ff(src$ptr_43, src$offset_41)
        gen$result_42 := _v16
        leave
      }
      function usr$WordReader_advance_ddbeacc0b$CalldataWordReader_d3137e4ff(src$reader_44, src$offset_45) -> gen$result_46 {
        let src$ptr_47
        src$ptr_47 := src$reader_44
        let _v17
        _v17 := usr$Add_add_d2e932f0d$word(src$ptr_47, src$offset_45)
        gen$result_46 := _v17
        leave
      }
      function usr$WordReader_read_dad71a7e5_pcb6af4462cd5d163$ABIDecoder_da57c46d1Luint256_d2edb4603_CalldataWordReader_d3137e4ffJ(src$decoder_48) -> gen$result_49 {
        let src$ptr_50
        src$ptr_50 := src$decoder_48
        let _v18
        _v18 := usr$WordReader_read_df18f24f1$CalldataWordReader_d3137e4ff(src$ptr_50)
        gen$result_49 := _v18
        leave
      }
      function usr$WordReader_read_df18f24f1$CalldataWordReader_d3137e4ff(src$reader_51) -> gen$result_52 {
        let src$ptr_53
        src$ptr_53 := src$reader_51
        let _v19
        _v19 := usr$opcodes_calldataload_d37992dc7(src$ptr_53)
        gen$result_52 := _v19
        leave
      }
      function usr$dispatch_basic_shape_DispatchBasicShape_id_d308af779(src$x_54) -> gen$result_55 {
        gen$result_55 := src$x_54
        leave
      }
      function usr$dispatch_basic_shape_DispatchBasicShape_main_d302fef00() {
        {
          mstore(0x40, memoryguard(128))
          let _v20
          let _v21
          _v21 := usr$opcodes_calldatasize_dee48adc5()
          let _v22
          _v22 := usr$std_ge_df0bec9f4$word(_v21, 4)
          _v20 := _v22
          switch _v20
            case false {
              /* false */
            }
            case true {
              {
                /* true */
                {
                  let _v23
                  let _v24
                  _v24 := usr$dispatch_selector_matches_de46e52b9$Method_dcbe49e39LDispatchNameTy_DispatchBasicShape_id_df55aba5a_NonPayable_da3e44601_uint256_d2edb4603_uint256_d2edb4603_fnLuint256_d2edb4603JRuint256_d2edb4603JJ()
                  _v23 := _v24
                  switch _v23
                    case false {
                      /* false */
                      {
                        let _v25
                        let _v26
                        _v26 := usr$dispatch_selector_matches_de46e52b9$Method_dcbe49e39LDispatchNameTy_DispatchBasicShape_answer_da50cdb80_NonPayable_da3e44601_unit_uint256_d2edb4603_fnLJRuint256_d2edb4603JJ()
                        _v25 := _v26
                        switch _v25
                          case false {
                            /* false */
                          }
                          case true {
                            {
                              /* true */
                              {
                                {
                                  let _v27
                                  let _v28
                                  let _v29
                                  _v27 := false
                                  _v28 := 0xb5988ea3
                                  let _v30
                                  _v30 := usr$opcodes_callvalue_d4847a28f()
                                  let _v31
                                  _v31 := usr$Eq_eq_d6d5d59e2$word(_v30, 0)
                                  usr$std_require_d22809541(_v31, _v27, _v28, _v29)
                                }
                                {
                                  let _v32
                                  _v32 := usr$opcodes_calldatasize_dee48adc5()
                                  let _v33
                                  _v33 := usr$std_ge_df0bec9f4$word(_v32, 4)
                                  usr$std_require_d22809541(_v33, false, 0x08638556, 911)
                                  let src$ptr_56
                                  src$ptr_56 := 4
                                  let src$rets_57
                                  src$rets_57 := 42
                                  let src$ptr_58
                                  let _v34
                                  _v34 := usr$std_abi_encode_d3b55212b$uint256_d2edb4603(src$rets_57)
                                  src$ptr_58 := _v34
                                  let _v35
                                  _v35 := usr$MemoryPointer_ptr_dbc7e9939$memory_dda73d3aeLbytes_dc4f6af34J(src$ptr_58)
                                  let _v36
                                  _v36 := usr$MemorySize_len_da518cdbc$memory_dda73d3aeLbytes_dc4f6af34J(src$ptr_58)
                                  usr$opcodes_return__d05fa185f(_v35, _v36)
                                }
                              }
                            }
                          }
                      }
                    }
                    case true {
                      {
                        /* true */
                        {
                          {
                            let _v37
                            let _v38
                            let _v39
                            _v37 := false
                            _v38 := 0xb5988ea3
                            let _v40
                            _v40 := usr$opcodes_callvalue_d4847a28f()
                            let _v41
                            _v41 := usr$Eq_eq_d6d5d59e2$word(_v40, 0)
                            usr$std_require_d22809541(_v41, _v37, _v38, _v39)
                          }
                          {
                            let _v42
                            _v42 := usr$opcodes_calldatasize_dee48adc5()
                            let _v43
                            _v43 := usr$std_ge_df0bec9f4$word(_v42, 36)
                            usr$std_require_d22809541(_v43, false, 0x08638556, 911)
                            let src$ptr_59
                            src$ptr_59 := 4
                            let src$args_60
                            let _v44
                            _v44 := usr$std_abi_decode_debc005b9$calldata_d8debf069Lbytes_dc4f6af34J_CalldataWordReader_d3137e4ff_uint256_d2edb4603_uint256_d2edb4603(src$ptr_59)
                            src$args_60 := _v44
                            let src$rets_61
                            let _v45
                            _v45 := usr$dispatch_basic_shape_DispatchBasicShape_id_d308af779(src$args_60)
                            src$rets_61 := _v45
                            let src$ptr_62
                            let _v46
                            _v46 := usr$std_abi_encode_d3b55212b$uint256_d2edb4603(src$rets_61)
                            src$ptr_62 := _v46
                            let _v47
                            _v47 := usr$MemoryPointer_ptr_dbc7e9939$memory_dda73d3aeLbytes_dc4f6af34J(src$ptr_62)
                            let _v48
                            _v48 := usr$MemorySize_len_da518cdbc$memory_dda73d3aeLbytes_dc4f6af34J(src$ptr_62)
                            usr$opcodes_return__d05fa185f(_v47, _v48)
                          }
                        }
                      }
                    }
                }
              }
            }
          {
            {
              let _v49
              let _v50
              let _v51
              _v49 := false
              _v50 := 0xb5988ea3
              let _v52
              _v52 := usr$opcodes_callvalue_d4847a28f()
              let _v53
              _v53 := usr$Eq_eq_d6d5d59e2$word(_v52, 0)
              usr$std_require_d22809541(_v53, _v49, _v50, _v51)
            }
            {
              let _v54
              let _v55
              let _v56
              _v54 := false
              _v55 := 0x4924aef0
              usr$std_revertWithError_d94ee902a(_v54, _v55, _v56)
            }
            stop()
          }
        }
        leave
      }
      function usr$dispatch_selector_matches_de46e52b9$Method_dcbe49e39LDispatchNameTy_DispatchBasicShape_answer_da50cdb80_NonPayable_da3e44601_unit_uint256_d2edb4603_fnLJRuint256_d2edb4603JJ() -> _v57 {
        let src$candidate_63
        src$candidate_63 := 2243657065
        let src$selector_64
        let _v58
        _v58 := usr$opcodes_calldataload_d37992dc7(0)
        let _v59
        _v59 := usr$opcodes_shr_d588bcc8e(224, _v58)
        src$selector_64 := _v59
        let _v60
        _v60 := usr$Eq_eq_d6d5d59e2$word(src$selector_64, src$candidate_63)
        _v57 := _v60
        leave
      }
      function usr$dispatch_selector_matches_de46e52b9$Method_dcbe49e39LDispatchNameTy_DispatchBasicShape_id_df55aba5a_NonPayable_da3e44601_uint256_d2edb4603_uint256_d2edb4603_fnLuint256_d2edb4603JRuint256_d2edb4603JJ() -> _v61 {
        let src$candidate_65
        src$candidate_65 := 2101100744
        let src$selector_66
        let _v62
        _v62 := usr$opcodes_calldataload_d37992dc7(0)
        let _v63
        _v63 := usr$opcodes_shr_d588bcc8e(224, _v62)
        src$selector_66 := _v63
        let _v64
        _v64 := usr$Eq_eq_d6d5d59e2$word(src$selector_66, src$candidate_65)
        _v61 := _v64
        leave
      }
      function usr$opcodes_calldataload_d37992dc7(src$a_67) -> gen$result_68 {
        let src$res_69
        src$res_69 := calldataload(src$a_67)
        gen$result_68 := src$res_69
        leave
      }
      function usr$opcodes_calldatasize_dee48adc5() -> gen$result_70 {
        let src$res_71
        src$res_71 := calldatasize()
        gen$result_70 := src$res_71
        leave
      }
      function usr$opcodes_callvalue_d4847a28f() -> gen$result_72 {
        let src$res_73
        src$res_73 := callvalue()
        gen$result_72 := src$res_73
        leave
      }
      function usr$opcodes_mload_d8413229c(src$a_74) -> gen$result_75 {
        let src$res_76
        src$res_76 := mload(src$a_74)
        gen$result_75 := src$res_76
        leave
      }
      function usr$opcodes_mstore_d7415bc7e(src$a_77, src$b_78) {
        mstore(src$a_77, src$b_78)
      }
      function usr$opcodes_return__d05fa185f(src$a_79, src$b_80) {
        return(src$a_79, src$b_80)
      }
      function usr$opcodes_revert_d73350734(src$a_81, src$b_82) {
        revert(src$a_81, src$b_82)
      }
      function usr$opcodes_shr_d588bcc8e(src$a_83, src$b_84) -> gen$result_85 {
        let src$res_86
        src$res_86 := shr(src$a_83, src$b_84)
        gen$result_85 := src$res_86
        leave
      }
      function usr$std_abi_decode_debc005b9$calldata_d8debf069Lbytes_dc4f6af34J_CalldataWordReader_d3137e4ff_uint256_d2edb4603_uint256_d2edb4603(src$decodable_87) -> gen$result_88 {
        let src$decoder_89
        let _v65
        _v65 := usr$HasWordReader_getWordReader_d92d4533d$calldata_d8debf069Lbytes_dc4f6af34J_CalldataWordReader_d3137e4ff(src$decodable_87)
        src$decoder_89 := _v65
        let _v66
        _v66 := usr$ABIDecode_decode_d84af4302_pcb6af4462cd5d163$ABIDecoder_da57c46d1Luint256_d2edb4603_CalldataWordReader_d3137e4ffJ_uint256_d2edb4603(src$decoder_89, 0)
        gen$result_88 := _v66
        leave
      }
      function usr$std_abi_encode_d3b55212b$uint256_d2edb4603(src$val_90) -> gen$result_91 {
        let src$ret_92
        let _v67
        _v67 := usr$std_get_free_memory_d1dc44c02()
        src$ret_92 := _v67
        let src$start_93
        let _v68
        _v68 := usr$Add_add_d2e932f0d$word(src$ret_92, 32)
        src$start_93 := _v68
        let src$tail_94
        let _v69
        _v69 := usr$Add_add_d2e932f0d$word(src$start_93, 32)
        let _v70
        _v70 := usr$ABIEncode_encodeInto_dd2f16529$uint256_d2edb4603(src$val_90, src$start_93, 0, _v69)
        src$tail_94 := _v70
        let _v71
        _v71 := usr$Sub_sub_dd601c728$word(src$tail_94, src$start_93)
        usr$opcodes_mstore_d7415bc7e(src$ret_92, _v71)
        usr$std_set_free_memory_d65c817cd(src$tail_94)
        gen$result_91 := src$ret_92
        leave
      }
      function usr$std_ge_df0bec9f4$word(src$x_95, src$y_96) -> _v72 {
        let _v73
        _v73 := usr$std_le_d7eb3f6cb$word(src$y_96, src$x_95)
        _v72 := _v73
        leave
      }
      function usr$std_get_free_memory_d1dc44c02() -> gen$result_97 {
        let _v74
        _v74 := usr$opcodes_mload_d8413229c(0x40)
        gen$result_97 := _v74
        leave
      }
      function usr$std_le_d7eb3f6cb$word(src$x_98, src$y_99) -> _v75 {
        let _v76
        _v76 := usr$Ord_gt_dbce4d001$word(src$x_98, src$y_99)
        let _v77
        _v77 := usr$std_not_dd1ce4f4b(_v76)
        _v75 := _v77
        leave
      }
      function usr$std_not_dd1ce4f4b(_v78) -> _v79 {
        switch _v78
          case false {
            /* false */
            _v79 := true
            leave
          }
          case true {
            {
              /* true */
              _v79 := false
              leave
            }
          }
      }
      function usr$std_require_d22809541(_v80, _v81, _v82, _v83) {
        let _v84
        let _v85
        _v85 := usr$std_not_dd1ce4f4b(_v80)
        _v84 := _v85
        switch _v84
          case false {
            /* false */
          }
          case true {
            {
              /* true */
              usr$std_revertWithError_d94ee902a(_v81, _v82, _v83)
            }
          }
      }
      function usr$std_revertWithError_d94ee902a(_v86, _v87, _v88) {
        switch _v86
          case false {
            /* Error */
            let src$selector_100
            src$selector_100 := _v87
            usr$opcodes_mstore_d7415bc7e(0, src$selector_100)
            usr$opcodes_revert_d73350734(28, 4)
          }
          case true {
            switch _v87
              case false {
                /* Empty */
                usr$opcodes_revert_d73350734(0, 0)
              }
              case true {
                {
                  /* Msg */
                  let src$msg_101
                  src$msg_101 := _v88
                  let src$msg__102
                  let _v89
                  _v89 := usr$Typedef_rep_d6e4e5fa6$memory_dda73d3aeLstring_d2d06d9f7J_word(src$msg_101)
                  src$msg__102 := _v89
                  let _v90
                  _v90 := usr$Add_add_d2e932f0d$word(src$msg__102, 32)
                  let _v91
                  _v91 := usr$opcodes_mload_d8413229c(src$msg__102)
                  usr$opcodes_revert_d73350734(_v90, _v91)
                }
              }
          }
      }
      function usr$std_set_free_memory_d65c817cd(src$loc_103) {
        usr$opcodes_mstore_d7415bc7e(0x40, src$loc_103)
        leave
      }
      usr$dispatch_basic_shape_DispatchBasicShape_main_d302fef00()
    }
  }
}
